			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

26-Jun-2004
~~~~~~~~~~~
Another Properties window fix: if there is no output from the du command
then put a message indicating an error (Stephen Watson).

23-Jun-2004
~~~~~~~~~~~
Let the panel autoscroll during a drag (Stephen Watson).

18-Jun-2004
~~~~~~~~~~~
Fix another bug when closing Properties window before it has finished
scanning the directory (Stephen Watson).

04-Jun-2004
~~~~~~~~~~~
Make ignoring executable files with known extensions the default setting
(suggested by Daniel Poersch). Freedesktop.org is discussing a plan to mark
individual MIME types as executable, which may be a better long-term
solution.
Option to prevent maximising windows from covering the panels (requested
by Simon Templer and others).

29-May-2004
~~~~~~~~~~~
Type specific Send To entries now shown for multiple files when they
are all of the same type (Stephen Watson).
Can now drag icons to the very end of the panel (Stephen Watson).

28-May-2004
~~~~~~~~~~~
Another place to look for apsymbols.h (Stephen Watson).

26-May-2004
~~~~~~~~~~~
More fixes for the new build system (Stephen Watson).

25-May-2004
~~~~~~~~~~~
Fix portability of new build system and ensure configure can find the 
version number again (Stephen Watson).

22-May-2004
~~~~~~~~~~~
Build object files in ~/build/ROX-Filer, in case source directory is read-only.
This also reduces the risk of distributing the object files by accident.

14-May-2004
~~~~~~~~~~~
Don't allow toolbar buttons to focus (needed for GTK 2.4).

08-May-2004
~~~~~~~~~~~
Fix loss of bookmark name when re-ordering (Rahsheen Porter).
Removed installation of thumbnail handlers via the Set Icon dialog. It was
never documented and all the thumbnailers use the mime_handler installation
anyway (Stephen Watson).

04-May-2004
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

02-May-2004
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

01-May-2004
~~~~~~~~~~~