@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+27-Jun-2004
+~~~~~~~~~~~
+Icons of minimized windows remember their positions on the pinboard (Stephen 
+Watson).
+
 26-Jun-2004
 ~~~~~~~~~~~
 Another Properties window fix: if there is no output from the du command
